원거리 공격 추가.
[신성현] 원거리 공격 추가.
- 오브젝트 풀로 탄환을 관리하자.

--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -175,6 +175,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\ECS\Component\Projectile.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\EnemyManager.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\ParticleData.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\ParticleManager.cpp" />
@@ -228,6 +229,7 @@
     <ClCompile Include="src\DUOLClient\Util\TransformController.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\ECS\Component\Projectile.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAttacks.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
     <ClInclude Include="include\DUOLClient\Manager\EnemyManager.h" />
