--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -22,7 +22,7 @@
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Attack.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Idle.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Move.cpp" />
-    <ClCompile Include="src\DUOLClient\Player\FSM\Weapon_Scaler.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\Weapon_Scaler.cpp" />
     <ClCompile Include="src\DUOLClient\Player\Player.cpp" />
     <ClCompile Include="src\DUOLClient\Camera\MainCameraController.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsClose.cpp" />
@@ -53,6 +53,7 @@
     <ClCompile Include="src\DUOLClient\Util\EventListenerIDHolder.cpp" />
     <ClCompile Include="src\DUOLClient\Util\TransformController.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Projectile.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Down.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
@@ -109,5 +110,6 @@
     <ClInclude Include="include\DUOLClient\ECS\Component\ParticleData.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAttacks.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Projectile.h" />
+    <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Down.h" />
   </ItemGroup>
 </Project>
